[package]
name = "rex"
version = "0.1.0"
authors = ["Lucas Taylor <lucas@perfectlunacy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Terminal control
termion = "1"
portable-pty = "0.4.0"
# Byte manipulation
bytes = "1.0.1"
# Simplify/Clarify error-handling
anyhow = "1.0.43"
simple-error = "0.2.3"
# Regex for parsing terminal output
regex = "1"
# Lazy eval for constantish Regex
lazy_static = "1.4.0"
# Logging
log = "0.4"
simplelog = "^0.7.4"
# Toml Parsing
toml = "0.5.6"
# (de)Serialization TODO: Check out https://github.com/not-fl3/nanoserde/ - lighter weight alt.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

# Faster channels
crossbeam-channel = "0.5.1"

# UUID support. Can't believe this isn't in the stdlib.
uuid = { version = "0.4", features = ["serde", "v4"] }